Ensure the minimum backbuffers for FlipEx
* Removes lockable backbuffer flag if exists
* Add FlipEx to AllSettings.ini

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -92,6 +92,7 @@ DdrawIntegerScalingClamp   = 0
 DdrawMaintainAspectRatio   = 0
 
 [d3d9]
+FlipEx                     = 0
 AnisotropicFiltering       = 0
 AntiAliasing               = 0
 CacheClipPlane             = 0
