--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -91,6 +91,7 @@ FullscreenWindowMode       = 0
 ForceExclusiveFullscreen   = 0
 ForceMixedVertexProcessing = 0
 ForceSystemMemVertexCache  = 0
+FlipEx                     = 0
 SetSwapEffectShim          = 0
 DisableMaxWindowedMode     = 0
 ForceDirect3D9On12         = 0
