--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -116,6 +116,7 @@ FullscreenWindowMode       = 0
 ForceExclusiveFullscreen   = 0
 ForceMixedVertexProcessing = 0
 ForceSystemMemVertexCache  = 0
+FlipEx                     = 0
 SetPOW2Caps                = 0
 EnableImgui                = 0
 SetSwapEffectShim          = 0
