--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -113,6 +113,7 @@ SetInitialWindowPosition   = 0
 InitialWindowPositionLeft  = 0
 InitialWindowPositionTop   = 0
 FullscreenWindowMode       = 0
+OverrideStencilFormat      = 0
 ForceExclusiveFullscreen   = 0
 ForceMixedVertexProcessing = 0
 ForceSystemMemVertexCache  = 0
