--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -113,10 +113,11 @@ SetInitialWindowPosition   = 0
 InitialWindowPositionLeft  = 0
 InitialWindowPositionTop   = 0
 FullscreenWindowMode       = 0
-OverrideStencilFormat      = 0
 ForceExclusiveFullscreen   = 0
 ForceMixedVertexProcessing = 0
 ForceSystemMemVertexCache  = 0
+UseShadowBackbuffer        = 0
+OverrideStencilFormat      = 0
 FlipEx                     = 0
 SetPOW2Caps                = 0
 EnableImgui                = 0
