--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -67,6 +67,7 @@ DdrawCustomHeight          = 0
 DdrawUseNativeResolution   = 0
 DdrawOverrideWidth         = 0
 DdrawOverrideHeight        = 0
+DdrawOverrideStencilFormat = 0
 DdrawIntegerScalingClamp   = 0
 DdrawMaintainAspectRatio   = 0
 
@@ -84,6 +85,7 @@ CustomDisplayHeight        = 0
 LimitPerFrameFPS           = 0
 EnableWindowMode           = 0
 WindowModeBorder           = 0
+WindowModeGammaShader      = 0
 SetInitialWindowPosition   = 0
 InitialWindowPositionLeft  = 0
 InitialWindowPositionTop   = 0
@@ -91,6 +93,8 @@ FullscreenWindowMode       = 0
 ForceExclusiveFullscreen   = 0
 ForceMixedVertexProcessing = 0
 ForceSystemMemVertexCache  = 0
+UseShadowBackbuffer        = 0
+OverrideStencilFormat      = 0
 FlipEx                     = 0
 SetSwapEffectShim          = 0
 DisableMaxWindowedMode     = 0
