Add option for DdrawUseShadowSurface

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -65,6 +65,7 @@ DdrawAutoFrameSkip         = 0
 DdrawFillSurfaceColor      = 0
 DdrawEmulateSurface        = 0
 DdrawEmulateLock           = 0
+DdrawUseShadowSurface      = 0
 DdrawKeepAllInterfaceCache = 0
 DdrawDisableDirect3DCaps   = 0
 DdrawAlternatePixelCenter  = 0
