--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -51,6 +51,7 @@ DdrawUseDirect3D9Caps      = 0
 DdrawAutoFrameSkip         = 0
 DdrawEmulateSurface        = 0
 DdrawEmulateLock           = 0
+DdrawUseShadowSurface      = 0
 DdrawKeepAllInterfaceCache = 0
 DdrawForceMipMapAutoGen    = 0
 DdrawClampVertexZDepth     = 0
