--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -96,6 +96,7 @@ DdrawMaintainAspectRatio   = 0
 [d3d9]
 AnisotropicFiltering       = 0
 AntiAliasing               = 0
+EnableMultisamplingATOC    = 0
 CacheClipPlane             = 0
 EnvironmentCubeMapFix      = 0
 LimitStateBlocks           = 0
