--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -76,6 +76,7 @@ DdrawMaintainAspectRatio   = 0
 [d3d9]
 AnisotropicFiltering       = 0
 AntiAliasing               = 0
+EnableMultisamplingATOC    = 0
 EnvironmentCubeMapFix      = 0
 EnableVSync                = 0
 ForceVsyncMode             = 0
