--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -185,6 +185,7 @@ copy /Y "$(ProjectDir)License.txt" "$(TargetDir)Build\" &gt;nul</Command>
     <ClCompile Include="d3d9\AddressLookupTable.cpp" />
     <ClCompile Include="d3d9\d3d9.cpp" />
     <ClCompile Include="d3d9\DebugOverlay.cpp" />
+    <ClCompile Include="d3d9\DeviceChecking.cpp" />
     <ClCompile Include="d3d9\IDirect3D9Ex.cpp" />
     <ClCompile Include="d3d9\IDirect3DCubeTexture9.cpp" />
     <ClCompile Include="d3d9\IDirect3DDevice9Ex.cpp" />
