--- a/dxwrapper.vcxproj.filters
+++ b/dxwrapper.vcxproj.filters
@@ -889,6 +889,9 @@
     <ClCompile Include="Utils\MemoryModule.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
+    <ClCompile Include="d3d9\DeviceChecking.cpp">
+      <Filter>d3d9</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Settings\AllSettings.ini">
