--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -189,6 +189,7 @@ copy /Y "$(ProjectDir)License.txt" "$(TargetDir)Build\" &gt;nul</Command>
     <ClCompile Include="d3d9\IDirect3D9Ex.cpp" />
     <ClCompile Include="d3d9\IDirect3DCubeTexture9.cpp" />
     <ClCompile Include="d3d9\IDirect3DDevice9Ex.cpp" />
+    <ClCompile Include="d3d9\IDirect3DDXVADevice9.cpp" />
     <ClCompile Include="d3d9\IDirect3DIndexBuffer9.cpp" />
     <ClCompile Include="d3d9\IDirect3DPixelShader9.cpp" />
     <ClCompile Include="d3d9\IDirect3DQuery9.cpp" />
@@ -199,6 +200,7 @@ copy /Y "$(ProjectDir)License.txt" "$(TargetDir)Build\" &gt;nul</Command>
     <ClCompile Include="d3d9\IDirect3DVertexBuffer9.cpp" />
     <ClCompile Include="d3d9\IDirect3DVertexDeclaration9.cpp" />
     <ClCompile Include="d3d9\IDirect3DVertexShader9.cpp" />
+    <ClCompile Include="d3d9\IDirect3DVideoDevice9.cpp" />
     <ClCompile Include="d3d9\IDirect3DVolume9.cpp" />
     <ClCompile Include="d3d9\IDirect3DVolumeTexture9.cpp" />
     <ClCompile Include="d3d9\InterfaceQuery.cpp" />
@@ -686,6 +688,7 @@ copy /Y "$(ProjectDir)License.txt" "$(TargetDir)Build\" &gt;nul</Command>
     <ClInclude Include="d3d9\IDirect3D9Ex.h" />
     <ClInclude Include="d3d9\IDirect3DCubeTexture9.h" />
     <ClInclude Include="d3d9\IDirect3DDevice9Ex.h" />
+    <ClInclude Include="d3d9\IDirect3DDXVADevice9.h" />
     <ClInclude Include="d3d9\IDirect3DIndexBuffer9.h" />
     <ClInclude Include="d3d9\IDirect3DPixelShader9.h" />
     <ClInclude Include="d3d9\IDirect3DQuery9.h" />
@@ -696,6 +699,7 @@ copy /Y "$(ProjectDir)License.txt" "$(TargetDir)Build\" &gt;nul</Command>
     <ClInclude Include="d3d9\IDirect3DVertexBuffer9.h" />
     <ClInclude Include="d3d9\IDirect3DVertexDeclaration9.h" />
     <ClInclude Include="d3d9\IDirect3DVertexShader9.h" />
+    <ClInclude Include="d3d9\IDirect3DVideoDevice9.h" />
     <ClInclude Include="d3d9\IDirect3DVolume9.h" />
     <ClInclude Include="d3d9\IDirect3DVolumeTexture9.h" />
     <ClInclude Include="d3d9\ShadowSurfaceStorage.h" />
