Add DdrawNoMultiThreaded & DdrawVertexLockDiscard
#453

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -68,9 +68,12 @@ DdrawEmulateLock           = 0
 DdrawUseShadowSurface      = 0
 DdrawKeepAllInterfaceCache = 0
 DdrawDisableDirect3DCaps   = 0
+DdrawForceMipMapAutoGen    = 0
+DdrawNoDrawBufferSysLock   = 0
+DdrawNoMultiThreaded       = 0
 DdrawAlternatePixelCenter  = 0
 DdrawClampVertexZDepth     = 0
-DdrawForceMipMapAutoGen    = 0
+DdrawVertexLockDiscard     = 0
 DdrawFlipFillColor         = 0
 DdrawFixByteAlignment      = 0
 DdrawEnableByteAlignment   = 0
