--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -55,7 +55,9 @@ DdrawUseShadowSurface      = 0
 DdrawKeepAllInterfaceCache = 0
 DdrawForceMipMapAutoGen    = 0
 DdrawNoDrawBufferSysLock   = 0
+DdrawNoMultiThreaded       = 0
 DdrawClampVertexZDepth     = 0
+DdrawVertexLockDiscard     = 0
 DdrawFixByteAlignment      = 0
 DdrawEnableByteAlignment   = 0
 DdrawIntroVideoFix         = 0
