Add an option for ForceKeyboardLayout
#464

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -32,6 +32,7 @@ DisableGDIGammaRamp        = 0
 EnableOpenDialogHook       = 0
 WinVersionLie              = off
 WinVersionLieSP            = 0
+ForceKeyboardLayout        = 0
 FixPerfCounterUptime       = 0
 HandleExceptions           = 0
 SingleProcAffinity         = 0
