--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -33,6 +33,7 @@ DisableGDIGammaRamp        = 0
 EnableOpenDialogHook       = 0
 WinVersionLie              = off
 WinVersionLieSP            = 0
+ForceKeyboardLayout        = 0
 FixPerfCounterUptime       = 0
 ForceTermination           = 0
 HandleExceptions           = 0
