--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -667,6 +667,7 @@ copy /Y "$(ProjectDir)License.txt" "$(TargetDir)Build\" &gt;nul</Command>
     <ClCompile Include="Settings\Settings.cpp" />
     <ClCompile Include="Utils\CPUAffinity.cpp" />
     <ClCompile Include="Utils\Disasm.cpp" />
+    <ClCompile Include="Utils\ForceKeyboardLayout.cpp" />
     <ClCompile Include="Utils\Fullscreen.cpp" />
     <ClCompile Include="Utils\MemoryModule.cpp" />
     <ClCompile Include="Utils\MyStrings.cpp" />
