Add DepthBias divide factor and drop off value

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -76,8 +76,8 @@ DdrawAlternatePixelCenter  = 0
 DdrawClampVertexZDepth     = 0
 DdrawVertexLockDiscard     = 0
 DdrawFlipFillColor         = 0
-DdrawFixByteAlignment      = 0
 DdrawEnableByteAlignment   = 0
+DdrawFixByteAlignment      = 0
 DdrawIntroVideoFix         = 0
 DdrawRemoveScanlines       = 0
 DdrawRemoveInterlacing     = 0
@@ -103,6 +103,8 @@ AntiAliasing               = 0
 EnableMultisamplingATOC    = 0
 CacheClipPlane             = 0
 EnvironmentCubeMapFix      = 0
+DepthBiasDivideFactor      = 0
+DepthBiasDropOffValue      = 0
 LimitStateBlocks           = 0
 ForceSingleBeginEndScene   = 0
 EnableVSync                = 0
