--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -55,12 +55,9 @@ DdrawEmulateLock           = 0
 DdrawUseShadowSurface      = 0
 DdrawKeepAllInterfaceCache = 0
 DdrawForceMipMapAutoGen    = 0
-DdrawNoDrawBufferSysLock   = 0
-DdrawNoMultiThreaded       = 0
 DdrawClampVertexZDepth     = 0
-DdrawVertexLockDiscard     = 0
-DdrawFixByteAlignment      = 0
 DdrawEnableByteAlignment   = 0
+DdrawFixByteAlignment      = 0
 DdrawIntroVideoFix         = 0
 DdrawRemoveScanlines       = 0
 DdrawRemoveInterlacing     = 0
@@ -82,6 +79,8 @@ AnisotropicFiltering       = 0
 AntiAliasing               = 0
 EnableMultisamplingATOC    = 0
 EnvironmentCubeMapFix      = 0
+DepthBiasDivideFactor      = 0
+DepthBiasDropOffValue      = 0
 EnableVSync                = 0
 ForceVsyncMode             = 0
 ShowFPSCounter             = 0
