--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -103,7 +103,7 @@ AntiAliasing               = 0
 EnableMultisamplingATOC    = 0
 CacheClipPlane             = 0
 EnvironmentCubeMapFix      = 0
-DepthBiasDivideFactor      = 0
+DepthBiasFactor            = 0
 DepthBiasDropOffValue      = 0
 LimitStateBlocks           = 0
 ForceSingleBeginEndScene   = 0
