--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -79,7 +79,7 @@ AnisotropicFiltering       = 0
 AntiAliasing               = 0
 EnableMultisamplingATOC    = 0
 EnvironmentCubeMapFix      = 0
-DepthBiasDivideFactor      = 0
+DepthBiasFactor            = 0
 DepthBiasDropOffValue      = 0
 EnableVSync                = 0
 ForceVsyncMode             = 0
