Add DdrawAllowMultiSampling option
Allows the game to use anti-aliasing if it enables it via the render state

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -69,6 +69,7 @@ DdrawEmulateLock           = 0
 DdrawUseShadowSurface      = 0
 DdrawKeepAllInterfaceCache = 0
 DdrawDisableDirect3DCaps   = 0
+DdrawAllowMultiSampling    = 0
 DdrawForceMipMapAutoGen    = 0
 DdrawNoDrawBufferSysLock   = 0
 DdrawNoMultiThreaded       = 0
