--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -54,6 +54,7 @@ DdrawEmulateSurface        = 0
 DdrawEmulateLock           = 0
 DdrawUseShadowSurface      = 0
 DdrawKeepAllInterfaceCache = 0
+DdrawAllowMultiSampling    = 0
 DdrawForceMipMapAutoGen    = 0
 DdrawClampVertexZDepth     = 0
 DdrawEnableByteAlignment   = 0
