Add HideWindowFocusChanges option
#515

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -124,6 +124,7 @@ SetInitialWindowPosition   = 0
 InitialWindowPositionLeft  = 0
 InitialWindowPositionTop   = 0
 FullscreenWindowMode       = 0
+HideWindowFocusChanges     = 0
 ForceExclusiveFullscreen   = 0
 ForceMixedVertexProcessing = 0
 ForceSystemMemVertexCache  = 0
